Fix player layout shift, consolidate controls

--- a/src/components/Player/Player.module.scss
+++ b/src/components/Player/Player.module.scss
@@ -15,13 +15,6 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  position: relative;
-  margin-top: layout.$spacing-xl;
-}
-
-.header > :first-child {
-  position: absolute;
-  left: layout.$spacing-xl;
 }
 
 .soundEditor {
